--- a/section2/section2/section2.vcxproj.filters
+++ b/section2/section2/section2.vcxproj.filters
@@ -15,16 +15,16 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="G:\Desktop\代码的文件夹\alogorithm\p18_work.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="G:\Desktop\代码的文件夹\alogorithm\p34_work.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
     <None Include="data.in">
       <Filter>源文件</Filter>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="p18_work.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="p34_work.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
